--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "standardlint-action",
   "description": "Runs StandardLint, an extensible standards linter and auditor.",
-  "version": "1.0.0",
+  "version": "1.0.5",
   "author": "Mikael Vesavuori",
   "license": "MIT",
   "keywords": [
@@ -34,20 +34,20 @@
   "dependencies": {
     "@actions/core": "1",
     "@actions/github": "5",
-    "@octokit/action": "4",
-    "standardlint": "^1.0.1"
+    "@octokit/action": "6",
+    "standardlint": "1.0.5"
   },
   "devDependencies": {
     "@types/node": "latest",
-    "@typescript-eslint/eslint-plugin": "5",
-    "@typescript-eslint/parser": "5",
-    "@vercel/ncc": "^0.36.0",
+    "@typescript-eslint/eslint-plugin": "6",
+    "@typescript-eslint/parser": "6",
+    "@vercel/ncc": "0",
     "eslint": "8",
     "eslint-config-prettier": "8",
-    "eslint-plugin-prettier": "4",
-    "prettier": "2",
+    "eslint-plugin-prettier": "5",
+    "prettier": "3",
     "ts-node": "latest",
     "tslib": "latest",
-    "typescript": "4"
+    "typescript": "5"
   }
 }
